# stacker

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE-ISC  README.md  README.mkd  appveyor.yml  build.rs
.github/actions/: ci-native.yml
.github/workflows/: main.yml  psm.yml  stacker.yml  test.yml
ci/: script.sh
examples/: on_stack_fibo.rs  on_stack_fibo_alloc_each_frame.rs  panics.rs  replace_stack_1.rs  thread.rs
psm/: .travis.yml  Cargo.toml  README.mkd  build.rs
psm/.cargo/: config.toml
psm/examples/: info.rs  on_stack_fibo.rs  on_stack_fibo_alloc_each_frame.rs  panics.rs  replace_stack_1.rs  thread.rs
psm/src/: lib.rs  tests.rs
psm/src/arch/: aarch64.rs  aarch64_armasm.asm  aarch_aapcs64.s  arm.rs  arm_aapcs.s  arm_armasm.asm  mod.rs  powerpc64_aix.s  wasm32.s  x86.rs  x86.s  x86_64.rs  x86_64.s  x86_64_msvc.asm  x86_64_windows.rs  x86_windows_gnu.s
psm/src/asm/: mod.rs
psm/src/asm/windows/: aarch64.rs  mod.rs  x86.rs  x86_64.rs
src/: lib.rs  mmap_stack_restore_guard.rs
src/arch/: aarch64_armasm.asm  aarch64_armasm.s  aarch_aapcs64.s  arm_aapcs.s  arm_armasm.s  asm.h  fallback.rs  i686.S  i686.asm  powerpc32.s  psm.h  windows.c  x86.s  x86_64.S  x86_64.asm  x86_64.s  x86_64_msvc.asm  x86_64_msvc.s  x86_msvc.asm  x86_msvc.s  zseries-linux.s
src/arch/wasm32/: README.md  black_box.s  build.sh  stack_pointer.s  switch_stacks.s
src/backends/: mod.rs  unix.rs  unix_pthread_wrapper.rs  windows.rs
src/guess_os_stack_limit/: mod.rs  openbsd.rs  unix.rs  unix_pthread_wrapper.rs  windows.rs
stacker/: Cargo.toml  README.mkd
stacker/src/: lib.rs
tests/: panic_handling.rs  simple.rs  smoke.rs  stack_direction_2.rs  web.rs
wasm-tests/: .gitignore  Cargo.toml
wasm-tests/src/: lib.rs
