[package]
name = "stacker"
version = "0.1.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/stacker"
homepage = "https://github.com/alexcrichton/stacker"
documentation = "https://docs.rs/stacker"
description = """
A stack growth library useful when implementing deeply recursive algorithms that
may accidentally blow the stack.
"""

[lib]
name = "stacker"
doctest = false
test = false

[dependencies]
cfg-if = "0.1"
libc = "0.2"

[build-dependencies]
cc = "1.0"
