[package]
name = "stacker"
version = "0.1.15"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Simonas Kazlauskas <stacker@kazlauskas.me>"]
build = "build.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/stacker"
homepage = "https://github.com/rust-lang/stacker"
documentation = "https://docs.rs/stacker/0.1.15"
description = """
A stack growth library useful when implementing deeply recursive algorithms that
may accidentally blow the stack.
"""

[lib]
name = "stacker"
doctest = false
test = false

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.45"
psm = { path = "psm", version = "0.1.7" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = [
  'memoryapi',
  'winbase',
  'fibersapi',
  'processthreadsapi',
  'minwindef',
]

[build-dependencies]
cc = "1.0.2"
