[package]
name = "psm"
version = "0.1.21"
authors = ["Simonas Kazlauskas <psm@kazlauskas.me>"]
build = "build.rs"
description = "Portable Stack Manipulation: stack manipulation and introspection routines"
keywords = ["stack", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/stacker/"
documentation = "https://docs.rs/psm/0.1.20"
readme = "README.mkd"

[lib]
harness = false

[dependencies]
cfg-if = "1.0.0"

[build-dependencies]
cc = "1.0.2"

[dev-dependencies]
backtrace = "0.3"
